--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-DB_HOST=erp-voting.mysql.database.azure.com
+DB_HOST=172.16.10.4
 DB_USER=erpadmin
 DB_PASSWORD=P@$$w0rd@2024
 DB_DATABASE=election_system
